Changes for 3.1:

	- ** View engine, Blade extracted to bundle.
	- Logging events.
	- ** db.fetch option for changing PDO fetch style.
	- controller factories for injecting any IoC.
	- link_to_action HTML helpers...
	- default value on config::get
	- Registering of view paths and extensions
	- Pattern based filters.
	- Better session ID assignment
	- Added cviebrock's unsigned support.
	- Added config, view, and lang loaders.
	- Moved more stuff into application/start
	- Removed error.display config options.
	- Added foreign key support to schema builder.
	- Postgres "unique" indexes are now added with ADD CONSTRAINT
	- Added "Event::until" method.
	- Added "memory" cache and session drivers.
	- Added controller::detect method.
	- Added Cache::forever method.
	- Controller layouts now resolved in Laravel\Controller __construct.
	- Rewrote Eloquent and included in core.
	- Added "match" validation rule.
	- Fixed table prefix bug.
	- Added Form::macro method.
	- Added Route::forward method.
	- Prepend table name to default index names in schema.
	- Added for/else to Blade.
	- Added View::render_each